--- a/equipped.html
+++ b/equipped.html
@@ -11,12 +11,12 @@
 	<body>
 		<?php include 'cors.php';?>
 		<div class="container">
-			<div class="header">Inventory</div>
+			<div class="header">VGR's Item Parser</div>
 			<div class="content">
 				<div id="root"></div>
 			</div>
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-		<script src="inventory.js" async defer></script>
+		<script src="index.js" async defer></script>
 	</body>
 </html>
