--- a/index.html
+++ b/index.html
@@ -1,22 +1,52 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title></title>
-		<meta name="description" content="">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<?php include 'cors.php';?>
-		<div class="container">
-			<div class="header">VGR's Item Parser</div>
-			<div class="content">
-				<div id="root"></div>
-			</div>
-		</div>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-		<script src="index.js" async defer></script>
-	</body>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>VGR's D2R Item Viewer</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
+<body class="bg-slate-700">
+    <!-- This example requires Tailwind CSS v2.0+ -->
+    <div class="relative bg-slate-800">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6">
+            <div
+                class="flex justify-between items-center border-b-2 border-slate-500 py-6 md:justify-start md:space-x-10">
+                <div class="flex justify-start lg:w-0 lg:flex-1">
+                    <a href="#">
+                        <span class="sr-only">Workflow</span>
+                        <img class="h-8 w-auto sm:h-10"
+                            src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="">
+                    </a>
+                </div>
+                <div class="-mr-2 -my-2 md:hidden">
+                    <button type="button"
+                        class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
+                        aria-expanded="false">
+                        <span class="sr-only">Open menu</span>
+                        <!-- Heroicon name: outline/menu -->
+                        <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            stroke-width="2" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+                        </svg>
+                    </button>
+                </div>
+                <nav class="hidden md:flex space-x-10">
+                    <a href="/equipped" class="text-base font-medium text-gray-500 hover:text-white"> Equipped </a>
+                    <a href="/inventory" class="text-base font-medium text-gray-500 hover:text-white"> Inventory </a>
+                    <a href="/mercenary" class="text-base font-medium text-gray-500 hover:text-white"> Mercenary </a>
+                    <a href="/personal" class="text-base font-medium text-gray-500 hover:text-white"> Personal Stash </a>
+                    <a href="/shared" class="text-base font-medium text-gray-500 hover:text-white"> Shared Stash 1 </a>
+                    <a href="/shared2" class="text-base font-medium text-gray-500 hover:text-white"> Shared Stash 2 </a>
+                    <a href="/shared3" class="text-base font-medium text-gray-500 hover:text-white"> Shared Stash 3 </a>
+                </nav>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
