fixed styling and routes

--- a/equipped.html
+++ b/equipped.html
@@ -11,7 +11,7 @@
 	<body>
 		<?php include 'cors.php';?>
 		<div class="container">
-			<div class="header">VGR's Item Parser</div>
+			<div class="header">Equipped</div>
 			<div class="content">
 				<div id="root"></div>
 			</div>
