--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>VGR's D2R Item Viewer</title>
-    <meta name="description" content="">
+    <meta name="description" content="Item Display Tool for D2R">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -13,7 +13,7 @@
 <body class="bg-slate-700">
     <!-- This example requires Tailwind CSS v2.0+ -->
     <div class="relative bg-slate-800">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6">
+        <div class="w-full mx-auto px-4 sm:px-6">
             <div
                 class="flex justify-between items-center border-b-2 border-slate-500 py-6 md:justify-start md:space-x-10">
                 <div class="flex justify-start lg:w-0 lg:flex-1">
@@ -23,26 +23,14 @@
                             src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="">
                     </a>
                 </div>
-                <div class="-mr-2 -my-2 md:hidden">
-                    <button type="button"
-                        class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
-                        aria-expanded="false">
-                        <span class="sr-only">Open menu</span>
-                        <!-- Heroicon name: outline/menu -->
-                        <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                            stroke-width="2" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
-                        </svg>
-                    </button>
-                </div>
-                <nav class="hidden md:flex space-x-10">
-                    <a href="/equipped" class="text-base font-medium text-gray-500 hover:text-white"> Equipped </a>
-                    <a href="/inventory" class="text-base font-medium text-gray-500 hover:text-white"> Inventory </a>
-                    <a href="/mercenary" class="text-base font-medium text-gray-500 hover:text-white"> Mercenary </a>
-                    <a href="/personal" class="text-base font-medium text-gray-500 hover:text-white"> Personal Stash </a>
-                    <a href="/shared" class="text-base font-medium text-gray-500 hover:text-white"> Shared Stash 1 </a>
-                    <a href="/shared2" class="text-base font-medium text-gray-500 hover:text-white"> Shared Stash 2 </a>
-                    <a href="/shared3" class="text-base font-medium text-gray-500 hover:text-white"> Shared Stash 3 </a>
+                <nav class="flex space-x-10">
+                    <a href="/D2RItemsDisplay/equipped" class="text-base font-medium text-gray-500 hover:text-white"> Equipped </a>
+                    <a href="/D2RItemsDisplay/inventory" class="text-base font-medium text-gray-500 hover:text-white"> Inventory </a>
+                    <a href="/D2RItemsDisplay/mercenary" class="text-base font-medium text-gray-500 hover:text-white"> Mercenary </a>
+                    <a href="/D2RItemsDisplay/personal" class="text-base font-medium text-gray-500 hover:text-white"> Personal Stash </a>
+                    <a href="/D2RItemsDisplay/shared" class="text-base font-medium text-gray-500 hover:text-white"> Shared Stash 1 </a>
+                    <a href="/D2RItemsDisplay/shared2" class="text-base font-medium text-gray-500 hover:text-white"> Shared Stash 2 </a>
+                    <a href="/D2RItemsDisplay/shared3" class="text-base font-medium text-gray-500 hover:text-white"> Shared Stash 3 </a>
                 </nav>
             </div>
         </div>
