prettier and removed test data

--- a/index.html
+++ b/index.html
@@ -1,40 +1,77 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>VGR's D2R Item Viewer</title>
-    <meta name="description" content="Item Display Tool for D2R">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Item Display Tool for D2R" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
+  </head>
 
-<body class="bg-slate-700">
+  <body class="bg-slate-700">
     <!-- This example requires Tailwind CSS v2.0+ -->
     <div class="relative bg-slate-800">
-        <div class="w-full mx-auto px-4 sm:px-6">
-            <div
-                class="flex justify-between items-center border-b-2 border-slate-500 py-6 md:justify-start md:space-x-10">
-                <div class="flex justify-start lg:w-0 lg:flex-1">
-                    <a href="#">
-                        <span class="sr-only">Workflow</span>
-                        <img class="h-8 w-auto sm:h-10"
-                            src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="">
-                    </a>
-                </div>
-                <nav class="flex space-x-10">
-                    <a href="/D2RItemsDisplay/equipped" class="text-base font-medium text-gray-500 hover:text-white"> Equipped </a>
-                    <a href="/D2RItemsDisplay/inventory" class="text-base font-medium text-gray-500 hover:text-white"> Inventory </a>
-                    <a href="/D2RItemsDisplay/mercenary" class="text-base font-medium text-gray-500 hover:text-white"> Mercenary </a>
-                    <a href="/D2RItemsDisplay/personal" class="text-base font-medium text-gray-500 hover:text-white"> Personal Stash </a>
-                    <a href="/D2RItemsDisplay/shared" class="text-base font-medium text-gray-500 hover:text-white"> Shared Stash 1 </a>
-                    <a href="/D2RItemsDisplay/shared2" class="text-base font-medium text-gray-500 hover:text-white"> Shared Stash 2 </a>
-                    <a href="/D2RItemsDisplay/shared3" class="text-base font-medium text-gray-500 hover:text-white"> Shared Stash 3 </a>
-                </nav>
-            </div>
+      <div class="w-full mx-auto px-4 sm:px-6">
+        <div
+          class="flex justify-between items-center border-b-2 border-slate-500 py-6 md:justify-start md:space-x-10"
+        >
+          <div class="flex justify-start lg:w-0 lg:flex-1">
+            <a href="#">
+              <span class="sr-only">Workflow</span>
+              <img
+                class="h-8 w-auto sm:h-10"
+                src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg"
+                alt=""
+              />
+            </a>
+          </div>
+          <nav class="flex space-x-10">
+            <a
+              href="/D2RItemsDisplay/equipped"
+              class="text-base font-medium text-gray-500 hover:text-white"
+            >
+              Equipped
+            </a>
+            <a
+              href="/D2RItemsDisplay/inventory"
+              class="text-base font-medium text-gray-500 hover:text-white"
+            >
+              Inventory
+            </a>
+            <a
+              href="/D2RItemsDisplay/mercenary"
+              class="text-base font-medium text-gray-500 hover:text-white"
+            >
+              Mercenary
+            </a>
+            <a
+              href="/D2RItemsDisplay/personal"
+              class="text-base font-medium text-gray-500 hover:text-white"
+            >
+              Personal Stash
+            </a>
+            <a
+              href="/D2RItemsDisplay/shared"
+              class="text-base font-medium text-gray-500 hover:text-white"
+            >
+              Shared Stash 1
+            </a>
+            <a
+              href="/D2RItemsDisplay/shared2"
+              class="text-base font-medium text-gray-500 hover:text-white"
+            >
+              Shared Stash 2
+            </a>
+            <a
+              href="/D2RItemsDisplay/shared3"
+              class="text-base font-medium text-gray-500 hover:text-white"
+            >
+              Shared Stash 3
+            </a>
+          </nav>
         </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
