--- a/personal.html
+++ b/personal.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title></title>
-		<meta name="description" content="">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<?php include 'cors.php';?>
-		<div class="container">
-			<div class="header">Personal Stash</div>
-			<div class="content">
-				<div id="root"></div>
-			</div>
-		</div>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-		<script src="personal.js" async defer></script>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="button-container">
+        <input id="inputId" type="file" />
+        <button type="button" onclick="jsonLoad()">Load File</button>
+      </div>
+      <div class="header">Personal Stash</div>
+      <div class="content">
+        <div id="root"></div>
+      </div>
+    </div>
+    <script src="personal.js" async defer></script>
+  </body>
 </html>
